# chess-vibe

./: .gitignore  Makefile  README.md  engines.json  engines.schema.json  ruff.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: task.md
.github/agents/: implement-pr.agent.md  implement.md  plan-issues.agent.md  validate-pr.agent.md  validate.agent.md
.github/prompts/: architecture.md  otel-strategy.md  plan-chessEngineSuite.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
backend/: pyproject.toml
backend/src/backend/: converters.py  main.py  models.py
backend/src/backend/routes/: __init__.py  engines.py  games.py  openings.py  sprt.py
backend/src/backend/services/: __init__.py  engine_pool.py  game_manager.py  sprt_service.py
backend/src/backend/ws/: __init__.py  play.py  sprt.py
backend/tests/: conftest.py  test_converters.py  test_engine_pool.py  test_game_manager.py  test_integration_play.py  test_main.py  test_routes_engines.py  test_routes_games.py  test_routes_openings.py  test_routes_sprt.py  test_sprt_service.py  test_ws_play.py  test_ws_sprt.py
engines/random-engine/: pyproject.toml
engines/random-engine/src/random_engine/: __init__.py  __main__.py  engine.py  uci.py
engines/random-engine/tests/: test_engine.py  test_uci.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  test-setup.ts
frontend/src/components/: Layout.test.tsx  Layout.tsx
frontend/src/components/Board/: Board.test.tsx  Board.tsx  PromotionDialog.test.tsx  PromotionDialog.tsx
frontend/src/components/EvalBar/: EvalBar.test.tsx  EvalBar.tsx
frontend/src/components/MoveList/: MoveList.test.tsx  MoveList.tsx
frontend/src/components/PromotionDialog/: PromotionDialog.test.tsx  PromotionDialog.tsx
frontend/src/components/SPRTDashboard/: SPRTDashboard.test.tsx  SPRTDashboard.tsx
frontend/src/contexts/: GameContext.tsx
frontend/src/contexts/__tests__/: GameContext.test.tsx
frontend/src/hooks/: useChessGame.ts  useWebSocket.ts
frontend/src/hooks/__tests__/: useChessGame.test.ts  useWebSocket.test.ts
frontend/src/pages/: GameReplayPage.test.tsx  GameReplayPage.tsx  PlayPage.test.tsx  PlayPage.tsx  SPRTTestsPage.test.tsx  SPRTTestsPage.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/types/: api.ts
scripts/: create-pr38-issues.sh  lint.sh  setup.sh  test.sh
shared/: pyproject.toml
shared/src/shared/: __init__.py  engine_registry.py  repo_root.py  time_control.py  uci_client.py  utils.py
shared/src/shared/storage/: __init__.py  file_store.py  models.py  pgn_export.py  repository.py
shared/tests/: conftest.py  test_engine_registry.py  test_file_store.py  test_pgn_export.py  test_storage_models.py  test_time_control.py  test_uci_client.py  test_uci_client_integration.py  test_utils.py
sprt-runner/: pyproject.toml
sprt-runner/src/sprt_runner/: __init__.py  __main__.py  adjudication.py  game.py  openings.py  runner.py  sprt.py  worktree.py
sprt-runner/tests/: conftest.py  test_adjudication.py  test_game.py  test_integration_runner.py  test_openings.py  test_runner.py  test_sprt.py  test_worktree.py
