[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for chess-vibe"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
shared = { path = "../shared" }

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]
