[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for chess-vibe"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "python-multipart",
    "uvicorn[standard]",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]
