[project]
name = "random-engine"
version = "0.1.0"
description = "Random move chess engine for testing"
requires-python = ">=3.14"
dependencies = [
    "chess",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/random_engine"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-cov",
]
